Changelog
=========

2.2.2 (unreleased)
------------------

- Nothing changed yet.


2.2.1 (2018-07-09)
------------------

- Add translation to Brazilian Portuguese.
  [hvelarde]

- Fix searchlink button to respect the selected index field in the query
  and quote the value for the search parameter
  [petschki]


2.2.0 (2016-03-07)
------------------

- accessibility improvements
  [daniele-andreotti]

- add compatibility with Plone 5
  [cewing]

- Drop support for Python 2.6.
  [hvelarde]


2.1.1 (2014-09-15)
------------------

- Don't break when searching encoded indexes. [davisagli]

- Fix ``getSetter`` method in tool.py to handle also discussion items. [cekk]

2.1 (2014-04-27)
----------------

- Enable search for values (search icon behind value). [jensens]

- Decode values so they work with Dexterity. [davisagli]

- Handle sets as field values. [davisagli]

- Update Dexterity content even if it has no explicit setter. [davisagli]

- Works when the field related to KeywordIndex is monovalued [thomasdesvenain]

- UI and labels improvements [thomasdesvenain]
	- selected values are kept after form submission
	- change in selection lists automatically submit the form
	- keywords are clickable labels
	- added some helpers and tooltips, and improved labels

- check for plone.app.multilingual and Products.LinguaPlone [pbauer]

- Fixed getSetter and getListFieldValues method in tool to handle also
  non-default field names [cekk]

- Removed skins and moved control panel to a browser view [cekk]

- Added custom permission to access the view [cekk]

- Fixed uninstall profile [cekk]

- Moved translations from i18n to locales [cekk]

2.0 (2013-04-24)
----------------

- take plone.app.multilingual into acount and set Language=all on change.
  [jensens]

- Use png icon as gif icon has been removed.
  [thomasdesvenain]

- Fix index update on keyword delete not to reindex all attributes. [leorochael]
