@@ -20,6 +20,11 @@ class Fixture(PloneSandboxLayer):
         import Products.PloneKeywordManager
         import plone.app.dexterity
         self.loadZCML(package=plone.app.dexterity)
+        try:
+            import Products.ATContentTypes
+            self.loadZCML(package=Products.ATContentTypes)
+        except ImportError:
+            pass
         self.loadZCML(package=Products.PloneKeywordManager)
 
         # Install product and call its initialize() function
@@ -29,6 +34,13 @@ class Fixture(PloneSandboxLayer):
         # Install into Plone site using portal_setup
         self.applyProfile(portal, 'Products.PloneKeywordManager:default')
         self.applyProfile(portal, 'plone.app.dexterity:default')
+
+        if PLONE_5:
+            try:
+                import Products.ATContentTypes  # noqa
+                self.applyProfile(portal, 'Products.ATContentTypes:default')
+            except ImportError:
+                pass
 
 
 FIXTURE = Fixture()
