@@ -4,7 +4,8 @@ Changelog
 2.2.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Python 3, Plone 5.2 compatibility
+  [vangheem]
 
 
 2.2.1 (2018-07-09)
